--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -41,6 +41,12 @@ section#compliance-top.container-color--dark-alt style=("background-color: #2327
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_top-pricing" }
         = partial "partials/snippets/button", :locals => { :label => "Hear from our Customers", :title => "Hear from our Customers", :url => "/platform/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_top-customers" }
 
+section.section-article.container-gray-10#platform-shared-responsibility
+  .row.group.align-center
+    .columns.small-12
+      h2.headline-4.group.text-center.spaced-out Understanding Shared Responsibility
+      <script src="https://fast.wistia.com/embed/medias/08ebxufc4q.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_08ebxufc4q seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
+
 section#compliance-shared-responsibility.section-article.container-color--dark-alt
   .row.group.align-center
     .columns.small-12
