--- a/source/platform/_nav-platform.html.erb
+++ b/source/platform/_nav-platform.html.erb
@@ -14,5 +14,5 @@
     </li>
 <% end %>
 <li class="menu-item menu-item--cta">
-    <%= partial "partials/snippets/button", :locals => { :label => "Pricing", :title => "See which tier is right for you.", :url => "/pricing", :button_classes => "button button--primary small", :icon => "icon-chevron-right", :icon_color => "white", :item_id => "top-nav", :data_track_group => "platform" } %>
+    <%= partial "partials/snippets/button", :locals => { :label => "Demo", :title => "Schedule a demo today.", :url => "/demo", :button_classes => "button button--primary small", :icon => "icon-chevron-right", :icon_color => "white", :item_id => "top-nav", :data_track_group => "platform" } %>
 </li>
