Footer update. Hid AWS page from subnav.

--- a/source/platform/aws.html.slim
+++ b/source/platform/aws.html.slim
@@ -9,7 +9,7 @@ ogType: "product"
 customCSS: "platform"
 layout: platform
 priority: "0.9"
-collectionName: "platform"
+# collectionName: "platform"
 collectionOrder: 5
 ctaCustom: true
 ---
