For the want of a nail, the horse was lost for want of a horse, the rider was lost

--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -277,4 +277,4 @@ div.st-ui-autocomplete div.st-query-present a.st-ui-result, section.st-ui-slide-
         z-index: 10;
     }
 }
-.overflow-hidden
+// .overflow-hidden {}
