Added (very quick) Azure page; SVG improvements; new "dark" artwork cf. RR's direction; section color block changes.

--- a/source/assets/scss/seldon.scss
+++ b/source/assets/scss/seldon.scss
@@ -70,6 +70,7 @@
 @import 'modules/type';
 @import 'modules/headers';
 @import 'modules/icons';
+@import 'modules/svg';
 @import 'modules/images';
 @import 'modules/components';
 @import 'modules/callouts';
