--- a/source/platform/azure.html.slim
+++ b/source/platform/azure.html.slim
@@ -1,10 +1,10 @@
 ---
-title: "Datica Platform on AWS"
-summary: "Datica Platform on AWS"
-navTitle: "AWS"
+title: "Datica Platform on Azure"
+summary: "Datica Platform on Azure"
+navTitle: "Azure"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
-date: "July 15, 2017"
+date: "May 7, 2018"
 ogType: "product"
 customCSS: "platform"
 layout: platform
@@ -18,20 +18,20 @@ ctaCustom: true
 section.section-article.container-gray-2.container-image--center(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3KaBSDhbtKc2cEewmeKQ0U/a8a9e2db412be3f6a8ffeb2a721f8d25/aws-bg.jpg, small]")
   .row.align-center
     .columns.small-12.medium-10.large-6.text-center
-      h1.headline-2.group.text-center Datica on AWS
-      p Datica is your partner on top of AWS. Utilizing AWS’s industry leading infratructure as a service platform, Datica provides unparalled compliance and risk management in the cloud.
+      h1.headline-2.group.text-center Datica on Azure
+      p Datica is your partner on top of Azure. Utilizing Azure’s industry leading infratructure as a service platform, Datica provides unparalled compliance and risk management in the cloud.
 
 section.section-article.container-gray-1
   .row.align-center
     .columns.small-12.medium-10.large-8.text-center
       h1.headline-2.group.text-center How Shared Responsibility Works
-      p Information security and compliance is always a shared responsibility among many partners. When you work with Datica we're sharing the responsibility of compliance and data protection with you. This also extends to our relationship with AWS. Our Business Associate Agreement with AWS defines the lines of risk between the two companies. This is also the case with the BAA you sign with us. See the diagram below to get a picture of where each parties responsibilities lie.
+      p Information security and compliance is always a shared responsibility among many partners. When you work with Datica we're sharing the responsibility of compliance and data protection with you. This also extends to our relationship with Azure. Our Business Associate Agreement with Azure defines the lines of risk between the two companies. This is also the case with the BAA you sign with us. See the diagram below to get a picture of where each parties responsibilities lie.
   .row.align-center
     .columns.small-12
       img.group src="https://images.ctfassets.net/189dvqdsjh46/29BoNcw4mIyegeOMWeUCCe/a85854be71b3e543caa184e2f4b6813d/01-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
   .row.align-center
     .columns.small-12.medium-6
-      p Essentially AWS will take on the risk of securing the physical infrastructure. They ensure no one will run into a datacenter and run out the door with a server containing PHI. This is a key responsibility in the shared model. However, this doesn’t get you much in the way of HIPAA compliance.
+      p Essentially Azure will take on the risk of securing the physical infrastructure. They ensure no one will run into a datacenter and run out the door with a server containing PHI. This is a key responsibility in the shared model. However, this doesn’t get you much in the way of HIPAA compliance.
   .row.align-center
     .columns.small-12.medium-9
       img.group src="https://images.ctfassets.net/189dvqdsjh46/tiBtuipAOWeSkcuMcocU8/0be65195dafc8b2de669345a3e4dda6e/02-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
@@ -44,20 +44,20 @@ section.section-article.container-gray-1
       img.group src="https://images.ctfassets.net/189dvqdsjh46/H0ZRYWKaK2GSMiEi4yasg/60f5c0d7d87d534415a3bcc7a242a1f8/03-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
   .row.align-center
     .columns.small-12.medium-6
-      p.group Beyond building compliance controls and mappings on top of AWS (as shown above) — you're still responsbile for the entirety of application level and administrative compliance.
+      p.group Beyond building compliance controls and mappings on top of Azure (as shown above) — you're still responsbile for the entirety of application level and administrative compliance.
   .row.align-center
     .columns.small-12.medium-8
       img.group src="https://images.ctfassets.net/189dvqdsjh46/1a2ghb7NiSqugqO28Yq4ic/0f873023970e176c4ac631c2ae607d9c/04-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
   .row.align-center
     .columns.small-12.medium-6
       p When you add up all of the compliance responsibilities across the entire spectrum of the cloud, you start to see just how large it is. No one company should take on even half of this.
-      p.group In the same way that you'll rely on AWS to secure the physical infrastructure in their datacenters, you should rely on Datica to deliver the 9/10ths of compliance required for HIPAA, HITRUST, GDPR, and more.
+      p.group In the same way that you'll rely on Azure to secure the physical infrastructure in their datacenters, you should rely on Datica to deliver the 9/10ths of compliance required for HIPAA, HITRUST, GDPR, and more.
 
 section.section-article.container-gray-3.container-image--center(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/qDYJLe7zyKsaU6OoGCSWg/55fed65d63a33a39b690697200a0d5b2/bg-rects-blue-dark.png?w=2200&h=1000&fm=jpg, medium]")
   .row.align-center
     .columns.small-12.medium-10.large-8.text-center
-      h1.headline-2.group.text-center Datica & AWS
-      p.group By relying on AWS to provide physical infrastructure compliance, and Datica to provide the rest, you'll be 100% HIPAA compliant at the infrastructure level. You'll still be responsible for the majority of application level and administrative compliance. However, Datica even helps there. Our <a class="link--yellow" href="/open-source/policies/">open source policies</a> are completely free to use and have been audited against HIPAA and HITRUST several times.
+      h1.headline-2.group.text-center Datica & Azure
+      p.group By relying on Azure to provide physical infrastructure compliance, and Datica to provide the rest, you'll be 100% HIPAA compliant at the infrastructure level. You'll still be responsible for the majority of application level and administrative compliance. However, Datica even helps there. Our <a class="link--yellow" href="/open-source/policies/">open source policies</a> are completely free to use and have been audited against HIPAA and HITRUST several times.
   .row.align-center
     .columns.small-12.medium-8
       img.group src="https://images.ctfassets.net/189dvqdsjh46/ZbmaDZgpmmWwmQwQ0coW6/1b50c5d5258c3bcb4cebd149512c1164/05-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
@@ -65,8 +65,8 @@ section.section-article.container-gray-3.container-image--center(data-interchang
     .columns.small-12.medium-12.large-4
       .card.drop
         .card-section
-          p.lead.text-center <strong>AWS</strong>
-          p Datica extends AWS APIs and infrastructure to take advantage of the cloud. AWS ensures physical security of their datacenters.
+          p.lead.text-center <strong>Azure</strong>
+          p Datica extends Azure APIs and infrastructure to take advantage of the cloud. Azure ensures physical security of their datacenters.
     .columns.small-12.medium-12.large-4
       .card.drop
         .card-section
