--- a/source/assets/scss/modules/containers.scss
+++ b/source/assets/scss/modules/containers.scss
@@ -329,7 +329,7 @@
             // @include noisy;
             color: $color_white; // optional, only spec if needed
             background-color: #08142f; // fallback
-            @include gradient(-155deg, #1B2044 0%, #17181D 52%, #17181D 100%);
+            @include gradient(-155deg, #1B2044 0%, #17181D 52%, #1F4681 100%);
             // &:before {
             //     background-image: linear-gradient(-135deg, #1B2044 0%, #17181D 52%, #17181D 100%);
             // }
