--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -104,7 +104,7 @@ aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
     .row.align-center
       .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
+        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes is here.
     .row.align-center
       .columns.small-6.large-4.text-right
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
