--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -43,39 +43,38 @@ section#compliance-top.container-color--dark-alt style=("background-color: #2327
         = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button hollow-inverted", :item_id => "cta_top-demo", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
         = partial "partials/snippets/button", :locals => { :label => "Hear from our Customers", :title => "Hear from our Customers", :url => "/platform/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_top-customers" }
 
-section#compliance-shared-responsibility.section-article.container-gray-11
+section#compliance-shared-responsibility.section-article.container-gray-2
   .row.group.align-center
     .columns.small-12.text-center
       h2.headline-2 Understanding Shared Responsibility
   .row.align-center
     .columns.small-12.large-8
-      img src="https://images.ctfassets.net/189dvqdsjh46/3I1RMHbhTiWi2cGYwoWusI/1faccfe27a55c511b84cd60a660080c7/shared-resp-1.svg" alt="Shared Responsibility"
+      img src="https://images.ctfassets.net/189dvqdsjh46/2HRXBAtQrSga8OuaMgYc22/fa77a259452d4c7dc5d77a0a45db31e1/shared-resp-1-dark.svg" alt="Shared Responsibility"
     .columns.small-12.large-12
-      img src="https://images.ctfassets.net/189dvqdsjh46/28YL53F8qMaumKQ0IA4sEW/bac9312c3dd67951702edb063bccdf49/shared-resp-2.svg" alt="Shared Responsibility Diagram"
+      img src="https://images.ctfassets.net/189dvqdsjh46/28YL53F8qMaumKQ0IA4sEW/ab55b40593c253f782e383c164ae6715/shared-resp-2-dark.svg" alt="Shared Responsibility Diagram"
   .row.align-center
     .columns.small-12.medium-5.large-4
-      .callout
-        h3.headline-5 Required Compliance Controls
-        markdown:
-          - Block-level encryption
-          - Network encryption between existing processes or services
-          - Sub-network segmentation
-          - Intrusion detection
-          - Vulnerability scanning
-          - Systems monitoring
-          - System-level logging
-          - App-level logging
-          - Log storage in an encrypted fashion
-          - Disaster recovery protocols
-          - Business continuity
-          - Patch management
-          - Breach management
-          - Daily backups
-          - Penetration testing
-          - Business Associate management
-          - Access control management
+      h3.headline-5 Required Compliance Controls
+      markdown:
+        - Block-level encryption
+        - Network encryption between existing processes or services
+        - Sub-network segmentation
+        - Intrusion detection
+        - Vulnerability scanning
+        - Systems monitoring
+        - System-level logging
+        - App-level logging
+        - Log storage in an encrypted fashion
+        - Disaster recovery protocols
+        - Business continuity
+        - Patch management
+        - Breach management
+        - Daily backups
+        - Penetration testing
+        - Business Associate management
+        - Access control management
     .columns.small-12.medium-7.large-8
-      .callout
+      .callout.callout--dark-alt
         h3.headline-5 Compliance is not magic, it's just a lot of work
         markdown:
           None of it is impossible for you to figure out. But configuring, integrating, documenting, auditing, and managing it across a fleet of containers or VMs with every deployment is how continuous compliance happens.
@@ -208,7 +207,7 @@ aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
     .row.align-center
       .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
+        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes is here.
     .row.align-center
       .columns.small-6.large-4.text-right
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
